--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -79,7 +79,7 @@
     <div class="overlay"></div>
     <div class="container d-flex flex-wrap" style="max-width: 1200px;">
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
-            <h2 class="m-3">刊登認養資料</h2>
+            <h2 class="m-3">我想送養</h2>
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
@@ -207,7 +207,7 @@
             </div>
         </div>
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
-            <h2 class="m-3">刊登協尋資料</h2>
+            <h2 class="m-3">我想協尋</h2>
             <div id="missingInput" class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
